Changelog
=========

0.7 (unreleased)
----------------

- Changed the compatibility list in the project view to a text line [Andreas Mantke]


0.6 (2016-05-20)
----------------

- Smaller fixes on the project view the project view template:
  removed an obsolete div tag and made logo and project description heading
  conditional, changed the heading for the current release down the hierarchy
  [Andreas Mantke]
- Fix in the project view for the link to css file [Andreas Mantke]


0.5 (2016-05-14)
----------------

- Added a css style for release install instructions [Andreas Mantke]
- Fix for getting the title of the project [Andreas Mantke]
- Removed the column one from project and (linked) release views [Andreas Mantke]


0.4 (2016-04-05)
----------------

- Fixed the screenshot definition in the tupcenter-view [Andreas Mantke]
- Added a missing comma in a listing of tupcenter.py [Andreas Mantke]
- Changed in setup.py from History.txt to CHANGES.txt [Andreas Mantke]
- Update of the internationalisation template file [Andreas Mantke]
- Removed obsolet History.txt [Andreas Mantke]


0.3 (2016-03-12)
----------------

- Fixed an import in tupcenter.py [Andreas Mantke]


0.2 (2016-03-11)
----------------

- Nothing changed yet.


0.1 (2016-03-11)
----------------

- Package created using templer
  [Andreas Mantke]