@@ -4,6 +4,7 @@ Changelog
 0.7 (unreleased)
 ----------------
 
+- Added a validator for the uniqueness of the naming of release and linked release [Andreas Mantke]
 - Changed the compatibility list in the project view to a text line [Andreas Mantke]
 
 
